# lunchjs

./: .env.example  .gitignore  .mcp.json  .tool-versions  CHANGELOG.md  CLAUDE.md  Gemfile  PRIVACY.md  README.md  deno.jsonc  package-lock.json  package.json  release-please-config.json  taskfile.yml
.claude/: settings.json
.claude/skills/: distributing-tauri-for-android  fastlane
.github/workflows/: build-android-app.yml  build-ios-app.yml  release-please.yml  test.yml
backlog/: config.yml
backlog/completed/: task-001 - Migrate-FastHTML-+-Tauri-to-Alpine.js-+-Tauri-for-iOS-support.md  task-002 - Migrate-taskfiles-from-upstream-lunch-repo.md  task-003 - Setup-fastlane-for-TestFlight-distribution.md  task-004 - Mobile-bottom-bar-shift-up-5%-and-buttons-toward-center.md  task-005 - Title-case-category-in-Add-Restaurant-success-message.md  task-012 - Move-bottom-navigation-bar-down-by-5%-on-mobile.md  task-013 - Implement-iOS-CI-CD-on-GitHub-Actions.md  task-014 - Investigate-runtime-caching-not-working-in-iOS-CI-workflow.md  task-017 - Ensure-Gemfile-Gemfile.lock-are-idempotent-for-iOS-builds.md  task-019 - Add-Android-build-support-and-test-on-Pixel-7-simulator.md  task-020 - Add-Android-tasks-to-taskfile.yml-and-taskfiles-tauri.yml.md  task-021 - Refactor-iOS-and-Android-tasks-into-separate-taskfiles.md  task-022 - Investigate-and-fix-Android-APK-crashes-on-database-operations.md  task-023 - Configure-Android-emulator-to-use-desktop-keyboard-instead-of-virtual-keyboard.md  task-026 - Remove-jarring-'Roll-Lunch'-button-animation.md  task-028 - Leverage-Taskfile-fingerprinting-in-CI-to-skip-unchanged-builds.md
backlog/tasks/: task-006 - Dynamic-version-display-in-Settings-view.md  task-007 - Fix-iOS-app-icon-(replace-default-Tauri-icon).md  task-008 - Optimize-Tauri-build-times.md  task-009 - Reduce-Rust-release-build-time.md  task-010 - Add-unit-and-integration-tests-for-Rust-backend.md  task-011 - Move-theme-toggle-up-and-to-the-left-on-desktop.md  task-012 - Move-bottom-navigation-bar-down-by-5%-on-mobile.md  task-013 - Implement-iOS-CI-CD-on-GitHub-Actions.md  task-014 - Investigate-runtime-caching-not-working-in-iOS-CI-workflow.md  task-015 - Seed-mobile-app-with-restaurants-on-first-launch.md  task-016 - Fix-iOS-icons-not-being-pushed-to-TestFlight-App-Store-Connect.md  task-018 - Fix-theme-toggle-not-selectable-on-desktop-and-mobile.md  task-021 - Refactor-iOS-and-Android-tasks-into-separate-taskfiles.md  (+13 more)
docs/: android.md  architecture.md  deno.md  testing.md
fastlane/: Appfile  Fastfile  Matchfile  README.md  report.xml
scripts/: dev_seed.sql
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/tests/: db_tests.rs
static/: demo.avif
taskfiles/: android.yml  deno.yml  ios.yml  npm.yml  tauri.yml
(+2 files in other folders)
