[package]
name = "lunch"
version = "0.9.1"
description = "Cross-platform restaurant selector"
authors = ["Lance"]
license = "Unlicense"
repository = ""
edition = "2021"

[lib]
name = "lunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
rand = "0.9"
chrono = "0.4"
dirs = "6"

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
