[package]
name = "lunch"
version = "0.9.2"
description = "Cross-platform restaurant selector"
authors = ["Lance"]
license = "Unlicense"
repository = ""
edition = "2021"

[lib]
name = "lunch"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false , features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"], default-features = false }
tauri-plugin-shell = "2"
serde = { version = "1", default-features = false }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
chrono = { version = "0.4", features = ["now"], default-features = false }
dirs = "6"

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
