[package]
name = "lunch"
version = "0.13.0"
description = "Cross-platform restaurant selector"
authors = ["Lance"]
license = "Unlicense"
repository = ""
edition = "2021"

[lib]
name = "lunch"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", default-features = false , features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"], default-features = false }
tauri-plugin-shell = "2"
tauri-plugin-devtools = { version = "2", optional = true }
serde = { version = "1", default-features = false }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
chrono = { version = "0.4", features = ["now"], default-features = false }
dirs = "6"
csv = "1"
tracing = "0.1"

[features]
default = []
devtools = ["tauri-plugin-devtools"]

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3  # Optimize proc-macros and build scripts even in dev

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
